fix: tags and doc for swagger
